--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 	</div>
 
 	<script src="https://unpkg.com/vue"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.js"></script>
 	<script src="main.js"></script>
 
 </body>
